--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+@import "./styles/mainPage.css";
+@import "./styles/cases.css";
+
 body {
   margin: 0;
 }
@@ -5,7 +8,6 @@ body {
 html,
 body {
   height: 100%;
-    overflow: hidden;
 }
 
 canvas {
