--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap');
+@import url("https://use.typekit.net/byv3ita.css");
+@import "./styles/variables.css";
 @import "./styles/mainPage.css";
+@import "./styles/hero.css";
 @import "./styles/cases.css";
+@import "./styles/header.css";
+@import "./styles/nav.css";
 
 body {
   margin: 0;
+  font-family: "DM Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 html,
