--- a/styles/cases.css
+++ b/styles/cases.css
@@ -1,13 +1,22 @@
 .cases {
     width: 80vw;
+    max-width: 1400px;
     aspect-ratio: 1/1;
     max-height: 60dvh;
     border-radius: 32px;
-    padding: 40px;
-    background-color: #eee;
+    padding: 16px;
     display: flex;
     flex-direction: row;
     gap: 24px;
+    background-color: color-mix(in srgb, var(--c-glass) 18%, transparent);
+    backdrop-filter: blur(24px);
+    box-shadow: 
+        inset 0 0 0 1px color-mix(in srgb, var(--c-light) 9%, transparent),
+        inset 0.3px 1px 0px 0px color-mix(in srgb, var(--c-light) 20%, transparent), 
+        inset -0.3px -1px 5px 0px color-mix(in srgb, var(--c-dark) 18%, transparent), 
+        0px 1px 5px 0px color-mix(in srgb, var(--c-dark) 12%, transparent), 
+        0px 6px 16px 0px color-mix(in srgb, var(--c-dark) 10%, transparent);
+    overflow: hidden;
   }
   
   .cases__list {
@@ -28,8 +37,11 @@
   }
   
   .cases__item_active {
-    background-color: #ddd;
+    background-color: color-mix(in srgb, var(--c-light) 8%, transparent);
     border-radius: 16px;
+    box-shadow: 
+        inset 0.4px 1px 0px 0px color-mix(in srgb, var(--c-light) 12%, transparent), 
+        0px 1px 4px 0px color-mix(in srgb, var(--c-dark) 8%, transparent);
   }
   
   .cases__item::after {
@@ -39,8 +51,16 @@
     content: '';
     display: block;
     height: 4px;
+    border-radius: 0 0 4px 0;
     width: 100%;
-    background-color: #ccc;
+    background-image: linear-gradient(
+        to right,
+        color-mix(in srgb, var(--c-light) 8%, transparent) 65%,
+        color-mix(in srgb, var(--c-light) 16%, transparent) 90%,
+        color-mix(in srgb, var(--c-light) 22%, transparent) 97%,
+        color-mix(in srgb, var(--c-light) 30%, transparent) 100%
+    );
+    /* background: color-mix(in srgb, var(--c-light) 16%, transparent); */
     transition: transform 100ms;
     transform: translateX(-100%);
   } 
@@ -50,9 +70,10 @@
   }
   
   .cases__pics {
-    background-color: #ddd;
+    background-color: color-mix(in srgb, var(--cc-bg) 80%, transparent);
     width: 100%;
-    padding: 40px;
+    padding: 32px;
+    border-radius: 16px;
   }
   
   .cases__picture {
