--- a/styles/cases.css
+++ b/styles/cases.css
@@ -1,3 +1,14 @@
+
+
+@keyframes casesOnScroll {
+    from {
+        transform: translateY(-40%) scale(0.7);
+    } 
+    to {
+        transform: translateY(0) scale(1);;
+    }
+}
+
 .cases {
     width: 80vw;
     max-width: 1400px;
@@ -17,34 +28,37 @@
         0px 1px 5px 0px color-mix(in srgb, var(--c-dark) 12%, transparent), 
         0px 6px 16px 0px color-mix(in srgb, var(--c-dark) 10%, transparent);
     overflow: hidden;
+    animation: casesOnScroll linear both;
+    animation-range: cover;
+    animation-timeline: view(block);
   }
   
-  .cases__list {
+.cases__list {
     width: 100%;
     padding: 0;
     margin: 0;
     display: flex;
     flex-direction: column;
     gap: 8px;
-  }
-  
-  .cases__item {
+}
+
+.cases__item {
     font-size: 20px;
     padding: 40px;
     display: block;
     position: relative;
     overflow: hidden;
-  }
-  
-  .cases__item_active {
+}
+
+.cases__item_active {
     background-color: color-mix(in srgb, var(--c-light) 8%, transparent);
     border-radius: 16px;
     box-shadow: 
         inset 0.4px 1px 0px 0px color-mix(in srgb, var(--c-light) 12%, transparent), 
         0px 1px 4px 0px color-mix(in srgb, var(--c-dark) 8%, transparent);
-  }
-  
-  .cases__item::after {
+}
+
+.cases__item::after {
     position: absolute;
     left: 0;
     top: 0;
@@ -63,30 +77,30 @@
     /* background: color-mix(in srgb, var(--c-light) 16%, transparent); */
     transition: transform 100ms;
     transform: translateX(-100%);
-  } 
-  
-  .cases__item_active::after {
+} 
+
+.cases__item_active::after {
     transform: translateX(calc(-100% + var(--progress, 0%)));
-  }
-  
-  .cases__pics {
+}
+
+.cases__pics {
     background-color: color-mix(in srgb, var(--cc-bg) 80%, transparent);
     width: 100%;
     padding: 32px;
     border-radius: 16px;
-  }
-  
-  .cases__picture {
+}
+
+.cases__picture {
     width: 100%;
     height: 100%;
     display: none;
-  }
-  
-  .cases__picture_active {
+}
+
+.cases__picture_active {
     display: block;
-  }
-  
-  .cases__picture_red { background-color: red; }
-  .cases__picture_green { background-color: green; }
-  .cases__picture_blue { background-color: blue; }
-  .cases__picture_yellow { background-color: yellow; }
+}
+
+.cases__picture_red { background-color: red; }
+.cases__picture_green { background-color: green; }
+.cases__picture_blue { background-color: blue; }
+.cases__picture_yellow { background-color: yellow; }
