--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,5 +1,7 @@
 .hero {
-    position: relative;
+    position: fixed;
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -12,11 +14,10 @@
     bottom: 0;
     right: 0;
     left: 0;
-    z-index: 0;
+    z-index: -1;
 }
 
 .hero__text {
-    z-index: 2;
     text-align: center;
     color: var(--c-content);
     font-weight: 700;
@@ -24,15 +25,17 @@
     flex-direction: column;
     margin: 0;
     width: 80%;
+    pointer-events: none;
 }
 
 .hero__hello {
     font-size: 2.4vw;
+    font-size: clamp(24px, 2.4vw, 36px);
     margin-bottom: 0.5em;
 }
 
 .hero__h {
-    font-size: 5vw;
+    font-size: clamp(28px, 5vw, 80px);
     line-height: 1.2em;
     font-family: "swear-display", sans-serif;
 }
@@ -52,7 +55,7 @@
 
 .hero__carousel {
     font-family: "swear-display-cilati", sans-serif;
-    font-size: 5.3vw;
+    font-size: clamp(30px, 5.3vw, 84px);
     line-height: 1.15em;
     height: 1em;
     margin-top: 0.15em;
