--- a/styles.css
+++ b/styles.css
@@ -6,18 +6,34 @@
 @import "./styles/cases.css";
 @import "./styles/header.css";
 @import "./styles/nav.css";
+@import "./styles/arrow.css";
+
+@font-face {
+  font-family: "DM Sans";
+  src: url("./fonts/DMSans[opsz,wght].woff2") format("woff2");
+  font-weight: 100 1000;
+  font-style: normal;
+}
 
 body {
   margin: 0;
-  font-family: "DM Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: var(--f-primary);
+  font-optical-sizing: auto;
+  font-feature-settings: "calt" 1, "liga" 1, "rlig" 1, "rvrn" 1, "kern" 1, "rclt" 1, "ss04" 1, "ss01" 1, "ss07" 1, "ss05" 1;
   -webkit-font-smoothing: antialiased;
 }
 
 html,
 body {
   height: 100%;
+  color: var(--c-content);
 }
 
 canvas {
   display: block;
+}
+
+.my-text {
+	font-feature-settings: "calt" 1, "liga" 1, "rlig" 1, "rvrn" 1, "kern" 1, "rclt" 1, "ss04" 1, "ss01" 1, "ss07" 1, "ss05" 1;
+	font-variation-settings: "opsz" 9, "wght" 400;
 }
