--- a/styles/variables.css
+++ b/styles/variables.css
@@ -10,5 +10,9 @@
 
 /* TYPE */
 :root {
+    --f-primary: "DM Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    --f-display: "swear-display", sans-serif;
+    --f-display-alt: "swear-display-cilati", sans-serif;
+
     --size-m: 20px;
 }
