--- a/styles/cases.css
+++ b/styles/cases.css
@@ -1,11 +1,13 @@
 .cases {
-    --fz: clamp(16px, 2vw, 20px);
+    --fz: clamp(16px, 1.5vw, 20px);
     --more-height: 60px;
 
     width: 80vw;
     max-width: 1400px;
     min-height: min-content;
-    /* max-height: 70dvh; */
+    height: 700px;
+    max-height: 80dvh;
+    box-sizing: border-box;
     border-radius: 32px;
     padding: 16px;
     display: flex;
@@ -41,6 +43,9 @@
 }
 
 .cases__list {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
     position: relative;
     list-style: none;
     padding: 0;
@@ -49,6 +54,7 @@
 }
 
 .cases__item {
+    height: 100%;
     padding: 0;
     border-radius: 16px;
     position: relative;
@@ -57,6 +63,8 @@
 .cases__link {
     position: relative;
     overflow: hidden;
+    height: 100%;
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: 3fr 1fr;
     grid-template-rows: auto;
@@ -64,6 +72,7 @@
         "company year"
         "name name"
         "tags tags";
+    align-content: center;
     align-items: baseline;
     border-radius: 16px;
     padding: 2.6vh 32px;
@@ -232,26 +241,34 @@
     translate: 0 calc((var(--more-height) + 16px) * -1);
 }
 
-.cases__pics {
-    background-color: color-mix(in srgb, var(--cc-bg) 80%, transparent);
-    width: 100%;
+.cases__pictures {
+    flex-basis: 50%;
+    max-height: 100%;
     padding: 32px;
     border-radius: 16px;
     box-sizing: border-box;
-    flex-basis: 50%;
+    background-color: color-mix(in srgb, var(--cc-bg) 80%, transparent);
 }
 
-.cases__picture {
+.cases__pic {
     width: 100%;
     height: 100%;
     display: none;
+    overflow: hidden;
 }
 
-.cases__picture_active {
+.cases__pic img {
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: contain;
+}
+
+.cases__pic_active {
     display: block;
 }
 
-.cases__picture_pl { background-color: red; }
-.cases__picture_pl2 { background-color: green; }
-.cases__picture_ya { background-color: blue; }
-.cases__picture_ya2 { background-color: yellow; }
+/* .cases__pic_pl { background-color: red; } */
+.cases__pic_pl2 { background-color: green; }
+.cases__pic_ya { background-color: blue; }
+.cases__pic_ya2 { background-color: yellow; }
