add basic layout for the play section

--- a/styles/mainPage.css
+++ b/styles/mainPage.css
@@ -9,7 +9,7 @@
     height: 90dvh;
 }
 
-.main__section {
+.main__cases {
     display: flex;
     justify-content: center;
     align-items: center;
