--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 @import "./styles/header.css";
 @import "./styles/nav.css";
 @import "./styles/arrow.css";
+@import "./styles/play.css";
 
 @font-face {
   font-family: "DM Sans";
