--- a/styles/play.css
+++ b/styles/play.css
@@ -18,6 +18,7 @@
     height: 100%;
     padding: 16px;
     border-radius: 32px;
+    box-sizing: border-box;
     background-color: 
         color-mix(in srgb, var(--c-glass) 18%, transparent);
     backdrop-filter: blur(24px);
@@ -32,14 +33,15 @@
 .play__pic:nth-child(1),
 .play__pic:nth-child(3) {
     position: absolute;
-    top: -5%;
+    bottom: 3%;
     z-index: 1;
-    scale: 0.9;
+    height: 90%;
     transform-origin: center bottom;
+    transition: translate 300ms cubic-bezier(0.39, 0.04, 0.04, 0.94), rotate 300ms cubic-bezier(0.39, 0.04, 0.04, 0.94);
 }
 
 .play__pic:nth-child(1) {
-    translate: -30%;
+    translate: -20%;
     rotate: -6deg;
 }
 
@@ -49,7 +51,7 @@
 }
 
 .play__pic:nth-child(3) {
-    translate: 30%;
+    translate: 20%;
     rotate: 6deg;
 }
 
@@ -64,16 +66,52 @@
 .play__link {
     display: block;
     position: absolute;
-    top: 50%;
+    bottom: 0;
     left: 50%;
-    translate: -50% -50%;
+    translate: -48% 18%;
+    scale: 0.8;
+    transform-origin: bottom;
     z-index: 3;
     font-family: var(--f-display-alt);
-    font-size: clamp(120px, 20vw, 200px);
-    line-height: 1.15em;
-    height: 1.4em;
+    font-size: clamp(120px, 30dvh, 400px);
+    line-height: 0.8em;
+    letter-spacing: 0.02em;
+    height: 1em;
     text-decoration: none;
+    color: transparent;
     color: var(--c-action);
-    font-weight: 600;
+    font-weight: 700;
     mix-blend-mode: difference;
+    transition: scale 200ms cubic-bezier(0.5, 0.04, 0.04, 0.94);
+    /* -webkit-text-stroke: 4px var(--c-action);
+    text-stroke: 4px var(--c-action); */
+}
+
+.play__desc {
+    position: absolute;
+    bottom: -7%;
+    margin: 0;
+    font-size: 20px;
+    opacity: 0;
+    translate: 0 15%;
+    transition: translate 200ms, opacity 200ms;
+}
+
+.play__link:hover {
+    scale: 1;
+}
+
+.play__pictures:has(.play__link:hover) .play__pic:nth-child(1) {
+    translate: -45% !important;
+    rotate: -8deg;
+}
+
+.play__pictures:has(.play__link:hover) .play__pic:nth-child(3) {
+    translate: 45% !important;
+    rotate: 8deg;
+}
+
+.play__pictures:has(.play__link:hover) .play__desc {
+    opacity: 1;
+    translate: 0 0;
 }
