--- a/styles/play.css
+++ b/styles/play.css
@@ -1,9 +1,12 @@
 .play {
     position: relative;
-    height: 90dvh;
+    padding: 20dvh 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    transform-origin: top;
+    /* transition: transform 50ms; */
+    will-change: transform;
 }
 
 .play__pictures {
@@ -22,6 +25,7 @@
     background-color: 
         color-mix(in srgb, var(--c-glass) 18%, transparent);
     backdrop-filter: blur(24px);
+    will-change: transform;
     box-shadow: 
         inset 0 0 0 1px color-mix(in srgb, var(--c-light) 9%, transparent),
         inset 0.3px 1px 0px 0px color-mix(in srgb, var(--c-light) 20%, transparent), 
@@ -37,7 +41,7 @@
     z-index: 1;
     height: 90%;
     transform-origin: center bottom;
-    transition: translate 300ms cubic-bezier(0.39, 0.04, 0.04, 0.94), rotate 300ms cubic-bezier(0.39, 0.04, 0.04, 0.94);
+    transition: translate 200ms ease, rotate 200ms ease;
 }
 
 .play__pic:nth-child(1) {
@@ -104,11 +108,13 @@
 .play__pictures:has(.play__link:hover) .play__pic:nth-child(1) {
     translate: -45% !important;
     rotate: -8deg;
+    transition: translate 300ms cubic-bezier(0.39, 0.04, 0.04, 0.94), rotate 300ms cubic-bezier(0.39, 0.04, 0.04, 0.94);
 }
 
 .play__pictures:has(.play__link:hover) .play__pic:nth-child(3) {
     translate: 45% !important;
     rotate: 8deg;
+    transition: translate 300ms cubic-bezier(0.39, 0.04, 0.04, 0.94), rotate 300ms cubic-bezier(0.39, 0.04, 0.04, 0.94);
 }
 
 .play__pictures:has(.play__link:hover) .play__desc {
