--- a/styles/variables.css
+++ b/styles/variables.css
@@ -15,5 +15,6 @@
     --f-display: "swear-display", sans-serif;
     --f-display-alt: "swear-display-cilati", sans-serif;
 
+    --size-s: 16px;
     --size-m: 20px;
 }
