add paper airplane to footer link

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,26 +1,84 @@
 .footer {
     width: 100%;
-    margin-top: 20dvh;
+    margin-top: 5dvh;
     padding: 32px;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 .footer__cta {
-    margin: 0 0 1em 0;
-    font-size: 9.25vw;
-    line-height: 0.6em;
+    position: relative;
+    margin: 0 -1em 1em 0;
+    padding-top: 1em;
+    padding-right: 1em;
+    font-size: 8.8vw;
     font-family: var(--f-display);
     font-weight: 700;
     white-space: nowrap;
+    display: flex;
+    align-items: baseline;
+    gap: 0.3em;
+    overflow: hidden;
+}
+
+.footer__cta::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: calc(100% - 4em);
+    height: 0.03em;
+    background-color: var(--c-content);
+    opacity: 0.2;
 }
 
 .footer__chat {
+    position: relative;
     font-family: var(--f-display-alt);
     color: var(--c-action);
     text-decoration-thickness: 0.05em;
     /* text-decoration-style: wavy; */
     text-underline-position: under;
-    line-height: 1;
+}
+
+.footer__chat::after {
+    content: '';
+    position: absolute;
+    left: -3%;
+    bottom: 0;
+    width: 106%;
+    height: 0.05em;
+    background-color: var(--c-action);
+}
+
+.footer__plane {
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    left: 0;
+    top: 0;
+    width: 1em;
+    height: 1em;
+    padding: 0.2em;
+    box-sizing: border-box;
+    background-color: color-mix(in srgb, var(--c-glass) 16%, transparent);
+    backdrop-filter: blur(16px);
+    box-shadow: 
+        inset 0 0 0 1px color-mix(in srgb, var(--c-light) 9%, transparent),
+        inset 0.3px 1px 0px 0px color-mix(in srgb, var(--c-light) 28%, transparent), 
+        inset -0.3px -1px 5px 0px color-mix(in srgb, var(--c-dark) 18%, transparent), 
+        0px 1px 5px 0px color-mix(in srgb, var(--c-dark) 12%, transparent), 
+        0px 6px 16px 0px color-mix(in srgb, var(--c-dark) 10%, transparent);
+        border-radius: 99em;
+    pointer-events: none;
+    transform: translateY(200%);
+    transition: transform 300ms ease-in;
+}
+
+.footer__plane svg {
+    fill: color-mix(in srgb, var(--c-content) 50%, transparent);
+    filter: drop-shadow(0px 1px 5px color-mix(in srgb, var(--c-dark) 30%, transparent));
 }
 
 .footer__about {
