--- a/styles/header.css
+++ b/styles/header.css
@@ -25,7 +25,7 @@
 
 .header__link {
     position: relative;
-    padding-right: 20px;
+    padding-right: 1em;
     font-size: var(--size-m);
     line-height: 48px;
     color: var(--c-content);
@@ -87,4 +87,18 @@
 .header__link:not(:hover)::before,
 .header__link:not(:hover)::after {
     transition-duration: 240ms;
+}
+
+@media (max-width: 500px) {
+    .header {
+        padding: 8px 16px;
+    }
+
+    .header__logo svg {
+        height: 20px;
+    }
+
+    .header__nav {
+        top: calc(100dvh - 100% + 8px);
+    }
 }
