--- a/styles/hero.css
+++ b/styles/hero.css
@@ -30,12 +30,12 @@
 
 .hero__hello {
     font-size: 2.4vw;
-    font-size: clamp(24px, 2.4vw, 36px);
+    font-size: clamp(20px, 2.4vw, 36px);
     margin-bottom: 0.5em;
 }
 
 .hero__h {
-    font-size: clamp(28px, 5vw, 80px);
+    font-size: clamp(30px, 5vw, 80px);
     line-height: 1.2em;
     font-family: var(--f-display);
 }
@@ -84,5 +84,12 @@
 
     100% {
         transform: translateY(calc(1.15em * -5));
+    }
+}
+
+
+@media (max-width: 500px) {
+    .hero__3d {
+        scale: 160%
     }
 }
