--- a/styles/variables.css
+++ b/styles/variables.css
@@ -18,3 +18,10 @@
     --size-s: 16px;
     --size-m: 20px;
 }
+
+@media (max-width: 500px) {
+    :root {
+        --size-s: 14px;
+        --size-m: 16px;
+    }
+}
