--- a/styles/cases.css
+++ b/styles/cases.css
@@ -328,7 +328,7 @@
         display: flex;
         /* gap: 16px; */
         height: 100%;
-        padding: 0 40px;
+        padding: 0 40px 16px;
         overflow-x: auto;
         overflow-y: hidden;
         scroll-snap-type: x mandatory;
@@ -347,7 +347,7 @@
         display: flex;
         flex-direction: column;
         width: calc(100vw - 80px);
-        height: 70dvh;
+        height: 100%;
         padding: 20px 20px 24px 20px;
         box-sizing: border-box;
         border-radius: 20px;
@@ -427,7 +427,7 @@
     .cases_mobile .cases__slider-dots {
         display: flex;
         justify-content: center;
-        margin-top: 12px;
+        margin-top: 4px;
         gap: 4px;
     }
 
