--- a/styles/mainPage.css
+++ b/styles/mainPage.css
@@ -1,9 +1,9 @@
 .main {
     --cc-bg-hero: #001683;
-    --cc-bg-case-1: #52018C;
-    --cc-bg-case-2: #8C0180;
-    --cc-bg-case-3: #014B8C;
-    --cc-bg-case-4: #42018C;
+    --cc-bg-case-1: #00599a;
+    --cc-bg-case-2: #20009a;
+    --cc-bg-case-3: #351f08;
+    --cc-bg-case-4: #2e2615;
     --cc-bg-default: #161E1D;
 
     --cc-bg: var(--cc-bg-hero);
