--- a/styles/cases.css
+++ b/styles/cases.css
@@ -223,6 +223,7 @@
     bottom: 30px;
 }
 
+/* .cases__item_active:last-child .cases__more, */
 .cases__item:last-of-type:hover .cases__more {
     opacity: 0.7;
 }
@@ -233,11 +234,13 @@
         inset 0 0 0 1px color-mix(in srgb, var(--c-light) 24%, transparent);
 }
 
+/* .cases__list:has(.cases__item_active:last-child) .cases__title, */
 .cases:has(.cases__item:last-of-type:hover) .cases__title {
     translate: 0 -0.5em;
     opacity: 0;
 }
 
+/* .cases__list:has(.cases__item_active:last-child), */
 .cases__list:has(.cases__item:last-of-type:hover) {
     translate: 0 calc((var(--more-height) + 16px) * -1);
 }
