--- a/styles/cases.css
+++ b/styles/cases.css
@@ -246,6 +246,9 @@
 }
 
 .cases__pictures {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     flex-basis: 50%;
     max-height: 100%;
     padding: 32px;
@@ -261,6 +264,7 @@
 .cases__pic {
     width: 100%;
     height: 100%;
+    max-height: 700px;
     display: none;
     overflow: hidden;
 }
