--- a/styles/variables.css
+++ b/styles/variables.css
@@ -6,6 +6,13 @@
 
     --c-content: #fff;
     --c-action: #33FF30;
+
+    --cc-bg-hero: #001683;
+    --cc-bg-case-1: #00599a;
+    --cc-bg-case-2: #20009a;
+    --cc-bg-case-3: #351f08;
+    --cc-bg-case-4: #2e2615;
+    --cc-bg-default: #161E1D;
 }
 
 
