--- a/styles/case.css
+++ b/styles/case.css
@@ -1,5 +1,19 @@
-.case {}
+.case {
+    --w-s: 620px;
+    --w-m: 880px;
+    --w-l: 1280px;
 
-.case__intro {
+    --fz: clamp(16px, 1.3vw, 20px);
+    
     background-color: var(--case-bg-color);
+}
+
+.case__alt-font {
+    font-family: var(--f-display-alt);
+}
+
+.case__body {
+    max-width: var(--w-l);
+    margin: 0 auto;
+    padding: 0 5vw;
 }
