--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
 @import "./styles/footer.css";
 @import "./styles/case.css";
 @import "./styles/intro.css";
+@import "./styles/summary.css";
 
 @import "./styles/cases/resale.css";
 
