--- a/styles/intro.css
+++ b/styles/intro.css
@@ -7,24 +7,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: clamp(60px, 12dvh, 150px);
 }
 
 .intro__company {
     font-size: var(--fz);
     text-align: center;
-    opacity: 0.5;
+    opacity: 0.6;
 }
 
 .intro__h {
-    font-size: clamp(30px, 5vw, 80px);
+    font-size: clamp(40px, 5vw, 80px);
     font-family: var(--f-display);
     line-height: 1.2em;
-    margin: 0.25em 0;
+    margin: 0.3em 0 0.45em;
     text-align: center;
 }
 
 .intro__deck {
+    width: 90%;
     max-width: var(--w-s);
     opacity: 0.5;
     font-size: var(--fz);
