--- a/styles/case.css
+++ b/styles/case.css
@@ -8,13 +8,47 @@
     background-color: var(--case-bg-color);
 }
 
-.case__alt-font {
-    font-family: var(--f-display-alt);
-}
-
 .case__body {
     max-width: var(--w-l);
     margin: 0 auto;
     padding: 0 max(32px, 5vw) 10dvh;
 }
 
+.case__summary {
+    max-width: var(--w-s);
+    margin: 0 auto;
+}
+
+.case__text-box {
+    max-width: var(--w-s);
+    margin: 80px auto 80px;
+}
+
+.case__h2 {
+    margin: 80px auto 32px;
+    font-family: var(--f-display);
+    font-size: clamp(28px, 4vw, 48px);
+}
+
+.case__text {
+    margin: 0 auto 0.8em;
+    font-size: var(--fz);
+    line-height: 150%;
+}
+
+.case__text-list {
+    font-size: var(--fz);
+    line-height: 150%;
+    padding-left: 1.4em;
+}
+
+.case__text-list li {
+    margin-bottom: 0.8em;
+    padding-inline-start: 1ch;
+}
+
+.case__text-list li::marker {
+    content: '✦';
+    font-size: 0.8em;
+    color: color-mix(in srgb, currentColor, transparent 60%);
+}
