add table of content

--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@
 @import "./styles/case.css";
 @import "./styles/intro.css";
 @import "./styles/summary.css";
+@import "./styles/toc.css";
 
 @import "./styles/cases/resale.css";
 
