--- a/styles/case.css
+++ b/styles/case.css
@@ -7,6 +7,7 @@
     
     background-color: var(--case-bg-color);
     overflow-x: hidden;
+    transition: background-color 500ms;
 }
 
 .case__body {
