--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@
 @import "./styles/intro.css";
 @import "./styles/summary.css";
 @import "./styles/toc.css";
+@import "./styles/switcher.css";
 
 @import "./styles/cases/resale.css";
 
@@ -60,4 +61,17 @@ canvas {
 
 .italic {
   font-style: italic;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
